# Sph2-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: calcul.rs  main.rs  pi.rs
