[package]
name = "Sph2-rs"
version = "0.1.5"
edition = "2021"
description = "An improved version of Sph-rs, that uses a mod to calculate the desired values."
license-file = "LICENSE"
repository = "https://github.com/FBDev64/Sph2-rs.git"
readme = "README.md"
homepage = "https://github.com/FBDev64/Sph2-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
